fix some z-index issues

--- a/src/components/charts/charts.scss
+++ b/src/components/charts/charts.scss
@@ -7,10 +7,9 @@
 }
 
 .chart {
-  position: relative;
+  position: absolute;
   width: 100%;
   height: 100%;
-  z-index: 1;
   color: white;
   font-family: Roboto, Arial;
   
